<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description">Repository has finished downloading</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="button_complete">Complete</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_option_1">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_option_2">LoadApp - Current Repository by Udacity</string>
    <string name="radio_option_3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="detail_label_file_name">File Name:</string>
    <string name="detail_label_status">Status:</string>
    <string name="detail_success">Success</string>
    <string name="detail_button_ok">OK</string>

</resources>
